--- a/package.json
+++ b/package.json
@@ -8,13 +8,9 @@
   "author": "Tobias Greshake",
   "license": "ISC",
   "dependencies": {
-    "bufferutil": "^4.0.6",
-    "chromedriver": "^97.0.4",
-    "chromium": "^3.0.3",
     "discord.js": "^13.6.0",
     "encoding": "^0.1.13",
-    "geckodriver": "^3.0.1",
-    "selenium-webdriver": "^4.1.1",
+    "puppeteer": "^13.4.0",
     "utf-8-validate": "^5.0.8"
   },
   "repository": {
