--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
         "resolveJsonModule": true,
         "importHelpers": true
     },
-    "include": ["src", "environment.d.ts"],
+    "include": ["src", "environment.d.ts", "botStatus.d.ts"],
     "exclude": ["node_modules", "**/*.spec.ts"]
 }
