it is possible to create a minecraft server; use idempotence of ansible

--- a/hetzner_server_management/configure_minecraft/configure_minecraft.yml
+++ b/hetzner_server_management/configure_minecraft/configure_minecraft.yml
@@ -1,25 +1,8 @@
 ---
 - hosts: hetzner_minecraft
-  #become: yes
+  become: yes
   vars_files:    
     - vars/vars.yml
 
   tasks:
-    - import_tasks: tasks/wireguard_server.yml
-
-- hosts: localhost
-  #become: yes
-  vars: #custom venv for ansible with hetzner hcloud
-    ansible_python_interpreter: /home/tobi/python-venv/ansible/bin/python
-  vars_files: 
-    - vars/vault.yml
-  tasks:
-    - import_tasks: tasks/wireguard_client.yml
-
-- hosts: hetzner_vpn
-  #become: yes
-  vars_files:
-    - vars/vars.yml
-
-  tasks:
-    - import_tasks: tasks/copy_public_key.yml
+    - import_tasks: tasks/minecraft_server.yml
