--- a/hetzner_server_management/configure_wireguard/configure_wireguard.yml
+++ b/hetzner_server_management/configure_wireguard/configure_wireguard.yml
@@ -9,10 +9,8 @@
 
 - hosts: localhost
   #become: yes
-  vars: #custom venv for ansible with hetzner hcloud
-    ansible_python_interpreter: /home/tobi/python-venv/ansible/bin/python
-  vars_files: 
-    - vars/vault.yml
+  vars_files:    
+    - vars/vars.yml
   tasks:
     - import_tasks: tasks/wireguard_client.yml
 
