--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ hetzner_server_management/configure_wireguard/vars/secrets.sh
 hetzner_server_management/create_server/scripts
 kbkm-minecraft
 kbkm-vpn
+kbkm-minecraft.pub
+kbkm-vpn.pub
+ssh_config
