check location of ssh key

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,9 @@ jobs:
                IdentityFile ~/.ssh/kbkm-minecraft
                StrictHostKeyChecking no
                UserKnownHostsFile=/dev/null
+      - name: Print location of ssh file
+        run: echo $(ls -la /home/runner/.ssh)
+        shell: bash
   build_container:
     runs-on: ubuntu-latest
     steps:
