--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,13 +35,13 @@ jobs:
       - name: Print location of ssh file
         run: echo $(ls -la /home/runner/.ssh)
         shell: bash
-      - name: Copy ssh key
-        run: |
-          cp /home/runner/.ssh/kbkm-vpn /home/runner/
-          cp /home/runner/.ssh/kbkm-minecraft /home/runner/
-        shell: bash
 
       - uses: actions/checkout@v2
+      - name: Copy ssh key
+        run: |
+          cp /home/runner/.ssh/kbkm-vpn /home/runner/work/KBKM-Bot/KBKM-Bot/
+          cp /home/runner/.ssh/kbkm-minecraft /home/runner/work/KBKM-Bot/KBKM-Bot/
+        shell: bash
       - name: Setup up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Build Docker Image
