--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,9 @@ jobs:
           cp /home/runner/.ssh/kbkm-vpn /home/runner/work/KBKM-Bot/KBKM-Bot/
           cp /home/runner/.ssh/kbkm-minecraft /home/runner/work/KBKM-Bot/KBKM-Bot/
         shell: bash
+      - name: Print location of ssh file
+        run: echo $(ls -la /home/runner/work/KBKM-Bot/KBKM-Bot)
+        shell: bash
       - name: Setup up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Build Docker Image
