--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build_container:
+  build_and_push_container:
     runs-on: ubuntu-latest
     steps:
       - name: Install SSH key of vpn server
