--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,11 @@
-name: build docker container and scan the container with snyk and push the container to docker hub
+---
+name: build docker container and scan the container with snyk
+      and push the container to docker hub
 
 on:
   push:
-    branches: [ master ]
-    paths-ignore: 
+    branches: [master]
+    paths-ignore:
       - '**/README.md'
 
 jobs:
@@ -19,7 +21,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
+
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v4
@@ -30,16 +32,16 @@ jobs:
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-          
+
       - name: Build Docker Image
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }} 
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
-          
+
       - name: Snyk Container Test
         continue-on-error: true
         uses: snyk/actions/docker@master
@@ -48,4 +50,3 @@ jobs:
         with:
           image: tobdocker/kbkm-bot:latest
           args: --file=Dockerfile
-
